--- a/_posts/2018-08-24-实验报告.md
+++ b/_posts/2018-08-24-实验报告.md
@@ -6,10 +6,10 @@ layout: post
 <https://escribir3.github.io/>
 
 ## 一、网站目录结构  
-![Tree](../images/tree.png)
+![Tree](/images/tree.png)
 
 ##二、网站截图
-- ![Home](../images/home.png)
+- ![Home](/images/home.png)
 - ![Blog](../images/blog.png)
 - ![markdown练习](../images/markdown.png)
   ![帖子](../images/Kiwifruit.png)
