--- a/_posts/2018-08-24-实验报告.md
+++ b/_posts/2018-08-24-实验报告.md
@@ -15,7 +15,7 @@ layout: post
   ![帖子](/images/Kiwifruit.png)
 - ![Staff](/images/Staff.png)
 - ![Author](/images/Author.png)
-- ![About](/images/about.png)
+- ![About](/images/About.png)
 
 ## 三、实验过程
 多次实验，根据教程做出静态网站，放入自己的帖子，将网站源代码上传到github上
