--- a/_posts/2018-08-24-实验报告.md
+++ b/_posts/2018-08-24-实验报告.md
@@ -21,4 +21,4 @@ layout: post
 多次实验，根据教程做出静态网站，放入自己的帖子，将网站源代码上传到github上
 
 ## 四、总结
-实验中最大的问题是不会将网站的源代码上传到github上，我先是上网查找资料，在自己对过程有大致了解后，再想同学请教证实，最后成功解决了问题。
+实验中最大的问题是不会将网站的源代码上传到github上，我先是上网查找资料，在自己对过程有大致了解后，再在小组内讨论，最后成功解决了问题。
