--- a/_posts/2018-08-25-实验报告2.md
+++ b/_posts/2018-08-25-实验报告2.md
@@ -1,1 +1,34 @@
+---
+layout: post
+author: M
+---
+# WEB应用软件开发实训 - 第3次作业 - Git使用
 
+>learngit项目网址为<>
+
+## 一、必做部分
+
+### 1.安装Git
+已安装
+### 2.创建版本库
+### 3.版本控制
+![版本控制](/images/版本控制.png)
+### 4.版本回退
+![版本回退](/images/版本回退.png)
+### 5.工作区和暂存区
+![工作区和暂存区](/images/工作区和暂存区.png)
+### 6.管理修改
+![管理修改](/images/管理修改.png)
+### 7.撤销修改
+![撤销修改](/images/撤销修改.png)
+### 8.删除文件
+![删除文件](/images/删除文件.png)
+### 9.添加远程仓库
+![添加远程仓库1](/images/添加远程仓库1.png)
+![添加远程仓库2](/images/添加远程仓库2.png)
+
+## 三、实验过程
+多次实验，根据教程做出静态网站，放入自己的帖子，将网站源代码上传到github上
+
+## 四、总结
+实验中最大的问题是不会将网站的源代码上传到github上，我先是上网查找资料，在自己对过程有大致了解后，再在小组内讨论，最后成功解决了问题。
