--- a/_posts/2018-08-25-实验报告2.md
+++ b/_posts/2018-08-25-实验报告2.md
@@ -23,9 +23,9 @@ author: M
 ![撤销修改](/images/撤销修改.png)
 ### 8.删除文件
 ![删除文件](/images/删除文件.png)
-### 9.添加远程仓库
-![添加远程仓库1](/images/添加远程仓库1.png)
-![添加远程仓库2](/images/添加远程仓库2.png)
+### 9.添加到远程仓库
+![添加到远程仓库1](/images/添加到远程仓库1.png)
+![添加到远程仓库2](/images/添加到远程仓库2.png)
 
 ## 三、实验过程
 多次实验，根据教程做出静态网站，放入自己的帖子，将网站源代码上传到github上
