--- a/_posts/2018-08-25-实验报告2.md
+++ b/_posts/2018-08-25-实验报告2.md
@@ -28,7 +28,7 @@ author: M
 ![添加到远程仓库2](/images/添加到远程仓库2.png)
 
 ## 三、实验过程
-多次实验，根据教程做出静态网站，放入自己的帖子，将网站源代码上传到github上
+根据教学步骤在WSL上学习Git的使用，了解Git的工作方式。
 
 ## 四、总结
-实验中最大的问题是不会将网站的源代码上传到github上，我先是上网查找资料，在自己对过程有大致了解后，再在小组内讨论，最后成功解决了问题。
+在实验中练习了Git的使用，比较好地理解了Git是一种分布式的版本控制器，客户端不只提取最新版本的文件快照，而是把代码仓库完整的镜像下来，这样任何一处协同工作的服务器发生故障，事后都可以用任何一个镜像出来的本地仓库恢复。
