--- a/_posts/2018-08-25-实验报告2.md
+++ b/_posts/2018-08-25-实验报告2.md
@@ -4,7 +4,7 @@ author: M
 ---
 # WEB应用软件开发实训 - 第3次作业 - Git使用
 
->learngit项目网址为<>
+>learngit项目网址为<https://github.com/escribir3/learngit>
 
 ## 一、必做部分
 
@@ -26,7 +26,18 @@ author: M
 ### 9.添加到远程仓库
 ![添加到远程仓库1](/images/添加到远程仓库1.png)
 ![添加到远程仓库2](/images/添加到远程仓库2.png)
-
+### 10.分支管理相关
+![创建与合并分支](/images/创建与合并分支.png)
+![解决冲突](/images/解决冲突.png)
+![分支管理策略](/images/分支管理策略.png)
+![Bug分支](/images/Bug分支.png)
+![Feature分支](/images/Feature分支.png)
+![多人协作1](/images/多人协作1.png)
+![多人协作2](/images/多人协作2.png)
+![多人协作3](/images/多人协作3.png)
+### 11.标签管理
+![创建标签](/images/创建标签.png)
+![操作标签](/images/操作标签.png)
 ## 三、实验过程
 根据教学步骤在WSL上学习Git的使用，了解Git的工作方式。
 
